# hyprland-per-window-layout

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  configuration.md  hyprland-per-window-xkblayout
src/: hyprland_event.rs  main.rs  options.rs  single.rs
