[package]
name = "hyprland-per-window-layout"
description = "Per window keyboard layout (language) for Hyprland wayland compositor"
version = "0.2.9"
edition = "2021"
exclude = ["target", "Cargo.lock"]
readme = "README.md"
repository = "https://github.com/coffebar/hyprland-per-window-layout"
keywords = ["cli", "wayland", "linux", "hyprland", "daemon"]
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
serde_json = "1.0.93"
nix = "0.23.0"
dirs = "5.0.1"
toml = "0.8.1"
